Bug 256835 - Plasma widget tooltips open offscreen with dual monitor setup
Summary: Plasma widget tooltips open offscreen with dual monitor setup
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-13 19:29 UTC by Leonidas Arvanitis
Modified: 2011-07-31 11:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.1
Sentry Crash Report:


Attachments
My dual monitor settings (65.96 KB, image/jpeg)
2010-11-13 19:30 UTC, Leonidas Arvanitis
Details
Example of "hidden" tooltip (103.19 KB, image/jpeg)
2010-11-13 19:31 UTC, Leonidas Arvanitis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Leonidas Arvanitis 2010-11-13 19:29:56 UTC
Version:           unspecified (using KDE 4.5.3) 
OS:                Linux

Whenever a mouse over tooltip of a widget pops up, it is rendered outside the screen area without taking into account whether it is visible or not (unlike context menus and widgets themselves).



Reproducible: Always

Steps to Reproduce:
a. setup two monitors so that the second one is on the right side and lower than the primary (first screenshot attachment)
b. add a clock widget on the top right of the second monitor
c. mouse over the clock to cause the date tooltip to appear

Actual Results:  
The tooltip is not visible because it is rendered outside the bounds of the monitor. (second screenshot attachment)

Expected Results:  
The tooltip appears on the upper side of the widget _but_ inside the screen.
Comment 1 Leonidas Arvanitis 2010-11-13 19:30:34 UTC
Created attachment 53397 [details]
My dual monitor settings
Comment 2 Leonidas Arvanitis 2010-11-13 19:31:22 UTC
Created attachment 53398 [details]
Example of "hidden" tooltip
Comment 3 Matthias Fuchs 2011-07-31 11:10:40 UTC
Git commit b296f1199b6c10d03ebd704fd27d516df783afb6 by Matthias Fuchs.
Committed on 28/07/2011 at 18:53.
Pushed by mfuchs into branch 'master'.

Correctly display popups when using multiple screens

If there are multiple screens with different resolutions or which
are not alligned the same way then it could happen that popups at
the edge were drawn (partially) offscreen.
This patch fixes that issue.

REVIEW:102118
BUG:256835
FIXED-IN:4.7.1
(cherry picked from commit c50f180f29a5d46093e0172baf71f6dcf9f23281)

M  +16   -14   plasma/corona.cpp

http://commits.kde.org/kdelibs/b296f1199b6c10d03ebd704fd27d516df783afb6