Correctly display popups when using multiple screens

If there are multiple screens with different resolutions or which
are not alligned the same way then it could happen that popups at
the edge were drawn (partially) offscreen.
This patch fixes that issue.

REVIEW:102118
BUG:256835
FIXED-IN:4.7.1
(cherry picked from commit c50f180f29a5d46093e0172baf71f6dcf9f23281)